feat: wtpコマンドの追加 (#854)